--- a/k8s/main/order-service-deployment.yaml
+++ b/k8s/main/order-service-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: order-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: order-service
@@ -18,7 +18,14 @@ spec:
               value: axonserver
             - name: AXONIQ_CONSOLE_CREDENTIALS
               value: "68447ea9-1:b8b5aeb75a1a48b89b4a8b10a0be3282"
-          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.20.6
+            - name: SPRING_PROFILES_ACTIVE
+              value: gmaps
+            - name: GMAPS_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: gmaps-api-key
+                  key: key
+          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.20.7
           name: order-service
           ports:
             - containerPort: 8102
