--- a/k8s/performance/saga-service-deployment.yaml
+++ b/k8s/performance/saga-service-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: saga-service
 spec:
-  replicas: 1
+  replicas: 8
   selector:
     matchLabels:
       app: saga-service
@@ -21,9 +21,9 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
             - name: SPRING_DATA_MONGODB_URI
-              value: "mongodb+srv://thesis:thesis@prod.xop3q7m.mongodb.net/saga?retryWrites=true&w=majority"
-#              value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
-          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.20.6
+#              value: "mongodb+srv://thesis:thesis@prod.xop3q7m.mongodb.net/saga?retryWrites=true&w=majority"
+              value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
+          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.20.7
           name: saga-service
           ports:
             - containerPort: 8106
