--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -82,6 +82,8 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.1.1
+      - name: Build with Gradle
+        run: ./gradlew build
       - name: Set TAG version
         if: startsWith(github.ref, 'refs/tags/v')
         run: echo "VERSION=${GITHUB_REF_NAME:1}" >> $GITHUB_ENV
