--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -157,8 +157,8 @@ jobs:
           platforms: linux/amd64
 
   deploy:
-    if: ${{ false }}  # disable for now
-#    if: startsWith(github.ref, 'refs/tags/v')
+#    if: ${{ false }}  # disable for now
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: [ build-services, build-shared, build-frontend ]
     environment: staging
